--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 </head>
 
 <body>
-<div id="wrap">
+<div class="wrap">
  <!-- header 시작 -->
- <header id="header">
+ <header class="header">
   <!-- headertop 시작 -->
   <div class="headertop"> 
    <h1>
@@ -202,7 +202,7 @@
    <!-- gnb_m 끝 -->
  
  <!-- main 시작 -->
- <main id="main">
+ <main class="main">
   <!-- main_visual 시작 -->
   <div class="main_visual">
    <!-- swiper-container 시작 -->
@@ -272,7 +272,7 @@
  </script>
   
  <!-- section 시작 -->
- <section id="section">
+ <section class="section">
   <!-- article1 시작 -->
   <article class="article">
    <h2>ALL SHOWS</h2>
@@ -472,8 +472,8 @@
  <!-- section 끝 -->
  
  <!-- up-btn 시작 -->
- <div id="up-btn">
-  <div class="up-btn">
+ <div class="up-btn">
+  <div class="upb">
    <a href="#">
     <img src="img/up-btn.png" alt="업버튼">
    </a>
@@ -482,7 +482,7 @@
  <!-- up-btn 끝 -->
  
  <!-- footer 시작 -->
- <footer id="footer">
+ <footer class="footer">
   <div class="footer">
    <div class="foot-top">
     <a href="https://www.youtube.com/user/natgeokorea/videos" target="_blank">
