--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
  
  <!-- footer 시작 -->
  <footer class="footer">
-  <div class="footer">
+  <div class="footer-inner">
    <div class="foot-top">
     <a href="https://www.youtube.com/user/natgeokorea/videos" target="_blank">
      <i class="fab fa-youtube"></i>
